RESOLVED FIXED313091
[iOS] CheckedPtr crash under [WebThermalMitigationObserver thermalStateDidChange]
https://bugs.webkit.org/show_bug.cgi?id=313091
Summary [iOS] CheckedPtr crash under [WebThermalMitigationObserver thermalStateDidCha...
Chris Dumez
Reported 2026-04-22 19:17:45 PDT
CheckedPtr crash under [WebThermalMitigationObserver thermalStateDidChange] on iOS.
Attachments
Chris Dumez
Comment 1 2026-04-22 19:18:00 PDT
Chris Dumez
Comment 2 2026-04-22 19:20:57 PDT
EWS
Comment 3 2026-04-23 03:29:04 PDT
Committed 311843@main (421f42aa5eba): <https://commits.webkit.org/311843@main> Reviewed commits have been landed. Closing PR #63389 and removing active labels.
EWS
Comment 4 2026-04-23 07:36:07 PDT
Committed 305413.722@safari-7624-branch (8665efe463d5): <https://commits.webkit.org/305413.722@safari-7624-branch> Reviewed commits have been landed. Closing PR #5035 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.