Cherry-pick 421f42aa5eba. rdar://175415862

[iOS] CheckedPtr crash under [WebThermalMitigationObserver thermalStateDidChange]
    https://bugs.webkit.org/show_bug.cgi?id=313091
    rdar://170616981

    Reviewed by Ryosuke Niwa.

    Make ThermalMitigationNotifier ref-counted instead of CanMakeCheckedPtr
    and protect this in `[WebThermalMitigationObserver thermalStateDidChange]`
    before calling notifyThermalMitigationChanged() on it.

    * Source/WebCore/page/Page.cpp:
    (WebCore::m_thermalMitigationNotifier):
    * Source/WebCore/page/Page.h:
    * Source/WebCore/platform/ThermalMitigationNotifier.cpp:
    (WebCore::ThermalMitigationNotifier::create):
    * Source/WebCore/platform/ThermalMitigationNotifier.h:
    * Source/WebCore/platform/cocoa/ThermalMitigationNotifier.mm:
    (-[WebThermalMitigationObserver thermalStateDidChange]):
    * Source/WebKit/NetworkProcess/cache/NetworkCache.cpp:
    (WebKit::NetworkCache::Cache::Cache):
    * Source/WebKit/NetworkProcess/cache/NetworkCache.h:

    Canonical link: https://commits.webkit.org/311843@main

Canonical link: https://commits.webkit.org/305413.900@safari-7624.4-branch