Source/WebCore/platform/ThermalMitigationNotifier.cpp
@@ -29,6 +29,11 @@
 
 namespace WebCore {
 
+Ref<ThermalMitigationNotifier> ThermalMitigationNotifier::create(ThermalMitigationChangeCallback&& callback)
+{
+    return adoptRef(*new ThermalMitigationNotifier(WTF::move(callback)));
+}
+
 #if !HAVE(APPLE_THERMAL_MITIGATION_SUPPORT)
 
 WTF_MAKE_TZONE_ALLOCATED_IMPL(ThermalMitigationNotifier);
